# k8s-gateway-api-demo

./: .gitignore  Dockerfile  Justfile  LICENSE  README.md  pyproject.toml
docs/: diagram.drawio
helm/apiserver/: Chart.yaml  values.yaml
helm/apiserver/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  gateway_reference_grant.yaml  hpa.yaml  secret.yaml  service.yaml
helm/dagster/: Chart.yaml  official-values.yaml  values.yaml
helm/dagster/templates/: _helpers.tpl  gateway_reference_grant.yaml  secret.yaml
helm/gatewayapi/: Chart.yaml  values.yaml
helm/gatewayapi/templates/: apiserver-gateway.yaml  apiserver-httproute.yaml  dagster-gateway.yaml  dagster-httproute.yaml  grafana-gateway.yaml  grafana-httproute.yaml  mongodb-gateway.yaml  mongodb-tcproute.yaml
helm/minio/: Chart.yaml  values.yaml
helm/minio/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
helm/mongodb/: Chart.yaml  values.yaml
helm/mongodb/templates/: NOTES.txt  _helpers.tpl  mongodb_admin_secret.yaml  mongodb_reference_grant.yaml  mongodb_replicaset.yaml
helm/prometheus/: Chart.yaml  official-values.yaml  values.yaml
helm/prometheus/templates/: _helpers.tpl  prometheus_reference_grant.yaml
helm/spark/: Chart.yaml  values.yaml
helm/spark/templates/: NOTES.txt  _helpers.tpl  master-deployment.yaml  master-service.yaml  worker-deployment.yaml
services/apiserver/: pyproject.toml
services/dagster_service/: README.md  pyproject.toml
services/dagster_service/src/: config.py  jobs.py  ops.py  resources.py  run.py
(+7 files in other folders)
